[gd_scene load_steps=17 format=3 uid="uid://bms8uuxojgtle"]

[ext_resource type="Script" path="res://Scenes/Level.gd" id="1_hi33k"]
[ext_resource type="Texture2D" uid="uid://cx7xco5a5pq5b" path="res://icon.svg" id="1_xj7bj"]
[ext_resource type="PackedScene" uid="uid://cjwq2iuhkem5" path="res://Scenes/Buildings/BuildingFG1.tscn" id="2_qdqot"]
[ext_resource type="PackedScene" uid="uid://b45hy5ely05a6" path="res://Scenes/Buildings/BuildingFG2.tscn" id="3_ldb7c"]
[ext_resource type="PackedScene" uid="uid://dl8j3e4ff4iuw" path="res://Scenes/Buildings/BuildingMG1.tscn" id="4_6cigh"]
[ext_resource type="PackedScene" uid="uid://dmbdwch8ega88" path="res://Scenes/Buildings/BuildingMG2.tscn" id="5_2v153"]
[ext_resource type="PackedScene" uid="uid://jopj67sfeyd4" path="res://Scenes/Player.tscn" id="6_lh7b0"]
[ext_resource type="PackedScene" uid="uid://davwwc0gopfu8" path="res://Scenes/Buildings/BuildingBG1.tscn" id="6_x6g3h"]
[ext_resource type="PackedScene" uid="uid://d2shuh05agkkb" path="res://Scenes/Buildings/BuildingBG2.tscn" id="7_42axd"]
[ext_resource type="Script" path="res://Scenes/ParallaxBackgroundScroll.gd" id="8_syn6b"]
[ext_resource type="Texture2D" uid="uid://b1htek331jg1g" path="res://Assets/Backgrounds/Stars Background.png" id="8_y7bud"]
[ext_resource type="Texture2D" uid="uid://cb8w35sl2wgw0" path="res://Assets/Backgrounds/Clouds Background.png" id="9_jdmu5"]

[sub_resource type="Curve2D" id="Curve2D_jqfty"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 500, 121, 0, 0, 0, 0, -500, 121)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_ooip8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 500, 161, 0, 0, 0, 0, -500, 161)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_aaxsb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 500, 161, 0, 0, 0, 0, -500, 161)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kp5ef"]
size = Vector2(2628, 511)

[node name="Level" type="Node2D"]
script = ExtResource("1_hi33k")
fg_buildings = Array[PackedScene]([ExtResource("2_qdqot"), ExtResource("3_ldb7c")])
mg_buildings = Array[PackedScene]([ExtResource("4_6cigh"), ExtResource("5_2v153")])
bg_buildings = Array[PackedScene]([ExtResource("6_x6g3h"), ExtResource("7_42axd")])

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("8_syn6b")

[node name="Stars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.05, 0.025)
motion_mirroring = Vector2(320, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Stars"]
texture = ExtResource("8_y7bud")
centered = false

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.05)
motion_mirroring = Vector2(320, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Clouds"]
texture = ExtResource("9_jdmu5")
centered = false

[node name="BG" type="CanvasLayer" parent="."]
layer = -3
follow_viewport_enabled = true

[node name="BGTimer" type="Timer" parent="BG"]
one_shot = true
autostart = true

[node name="Path2D" type="Path2D" parent="BG"]
curve = SubResource("Curve2D_jqfty")

[node name="MG" type="CanvasLayer" parent="."]
layer = -2
offset = Vector2(0, -15)
transform = Transform2D(1, 0, 0, 1, 0, -15)
follow_viewport_enabled = true

[node name="MGTimer" type="Timer" parent="MG"]
one_shot = true
autostart = true

[node name="Path2D" type="Path2D" parent="MG"]
curve = SubResource("Curve2D_ooip8")

[node name="FG" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="FGTimer" type="Timer" parent="FG"]
one_shot = true
autostart = true

[node name="Path2D" type="Path2D" parent="FG"]
curve = SubResource("Curve2D_aaxsb")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(-128, 42)

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-473, 120)
scale = Vector2(20.4813, 3.95661)
texture = ExtResource("1_xj7bj")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(841, 384)
shape = SubResource("RectangleShape2D_kp5ef")

[node name="Player" parent="." instance=ExtResource("6_lh7b0")]
position = Vector2(25, 153)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)

[connection signal="timeout" from="BG/BGTimer" to="." method="_on_bg_timer_timeout"]
[connection signal="timeout" from="MG/MGTimer" to="." method="_on_mg_timer_timeout"]
[connection signal="timeout" from="FG/FGTimer" to="." method="_on_fg_timer_timeout"]
